# tower4defense

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.orig  Makefile  clean.sh  client  cmake_install.cmake  install.sh  lazy.map  readme.md  server
docs/: editor.md  mockup-admin.epgz
docs/Documentacion/manual-tecnico/: diagrama-clases-cliente-acceso.xmi  diagrama-clases-cliente.xmi  diagrama-server-estructura.xmi  diagrama-server-gameloop.xmi  secuencia-acceso.xmi
include/: ClientRequestHandler.h  Exceptions.h  Juego.h  Listener.h  Message_Text.h  Socket.h  SocketManager.h  TextMessage.h  ThreadedQueue.h  tron.h
resources/glade/: game-access.glade  game-window.glade
resources/maps/: convergence.json  mapa.json  mapa1.map  nombredearchivo.json  pepo.json  spiral.json
resources/old/: mapa2.map
src/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  client_StartWindow.cpp  client_StartWindow.h  client_main.cpp  client_main2.cpp  client_main_cairo.cpp  clientt  cmake_install.cmake  game-window.glade  server_ClientRequestHandler.cpp  server_ClientRequestHandler.h  server_Listener.cpp  server_Listener.h  server_main.cpp  servert
src/access/: AccessGameHandler.cpp  AccessGameHandler.h  ComboColumns.cpp  ComboColumns.h  GameAccess.cpp  GameAccess.h  Listener.cpp  Listener.h  Sender.cpp  Sender.h  main.cpp  main_gameAccess.cpp
src/client/: AnimablesContainer.cpp  AnimablesContainer.h  ClientListener.cpp  ClientListener.h  ClientSender.cpp  ClientSender.h  Constants.h  Dot.cpp  Dot.h  Game.cpp  Game.h  GameAccess.cpp  GameAccess.h  GameAccessWindow.cpp  GameAccessWindow.h  GamePlayWindow.cpp  GamePlayWindow.h  GameWindow.cpp  GameWindow.h  GameWindowHandler.cpp  GameWindowHandler.h  IntermediateBuffer.cpp  IntermediateBuffer.h  IsometricTile.cpp  IsometricTile.h  LTexture.cpp  LTexture.h  Listener.cpp  Listener.h  ListenerAccess.cpp  ListenerAccess.h  Match.cpp  Match.h  Notificable.h  Point.h  Sender.cpp  Sender.h  SenderAccess.cpp  SenderAccess.h  SharedBuffer.cpp  (+10 more)
src/common/: Circle.h  CommonUtils.cpp  CommonUtils.h  Constants.h  GameNotification.cpp  GameNotification.h  Message.cpp  Message.h  MessageFactory.cpp  MessageFactory.h  Message_Text.cpp  Message_Text.h  Point.cpp  Point.h  Protocol.cpp  Protocol.h  Request.cpp  Request.h  Serializable.h  SharedBuffer.cpp  SharedBuffer.h  Socket.cpp  Socket.h  SocketManager.cpp  SocketManager.h  TextMessage.cpp  TextMessage.h  ThreadedQueue.cpp  ThreadedQueue.h  Utils.cpp  Utils.h
src/common/model/: Enemy.h  Map.cpp  Map.h
src/common/modelo/: Enemy.cpp  Mapa.cpp  Mapa.h  Terreno.h
src/editor/: DataEntry.cpp  Editor.cpp  Editor.h  Screen.cpp  Screen.h  StateCommand.cpp  StateHordeCreation.cpp  StateHordeManagement.cpp  StatePath.cpp  StateTile.cpp  main.cpp
src/glade/: game-window.glade
src/sdl/: Animable.h  Animation.cpp  Animation.h  Circle.h  CompositeAnimation.cpp  Constants.h  Dot.cpp  Dot.h  GridAnimation.cpp  Keybinding.cpp  Keybinding.h  LTexture.cpp  LTexture.h  Screen.cpp  Screen.h  SdlUtils.cpp  SdlUtils.h  StaticFrame.cpp  Texture.cpp  Texture.h  Tile.cpp  Tile.h  Utils.cpp  Utils.h
src/sdl/enemies/: Abmonible.cpp  Abmonible.h  BloodHawk.cpp  BloodHawk.h  DrawableHorde.cpp  DrawableHorde.h  Enemy.cpp  Enemy.h  Goatman.cpp  Goatman.h  GreenDaemon.cpp  GreenDaemon.h  Horde.cpp  Horde.h  Spectre.cpp  Spectre.h  Zombie.cpp  Zombie.h
src/sdl/portals/: EnterPortal.cpp  EnterPortal.h  ExitPortal.cpp  ExitPortal.h  Portal.cpp  Portal.h
src/sdl/towers/: Air.cpp  Air.h  Animable.cpp  Earth.cpp  Earth.h  Fire.cpp  Fire.h  Tower.cpp  Tower.h  Water.cpp  Water.h
src/server/: ActionGame.cpp  ActionGame.h  ClientRequestHandler.cpp  ClientRequestHandler.h  GameAction.cpp  GameAction.h  GameActor.cpp  GameActor.h  GameLoopWorker.cpp  GameLoopWorker.h  GameNotification.cpp  GameNotification.h  GameNotificationFactory.cpp  GameNotificationFactory.h  GameServer.cpp  GameServer.h  Juego.cpp  Listener.cpp  Listener.h  ListenerLoopGame.cpp  ListenerLoopGame.h  Request.cpp  Request.h  Server.cpp  Server.h  ServerAccess.cpp  ServerAccess.h  ServerGame.cpp  ServerGame.h  ServerMatch.cpp  ServerMatch.h  ServerPlayer.cpp  ServerPlayer.h  WorkerLoopGame.cpp  WorkerLoopGame.h  main.cpp
src/server/game-actions/: GameActionGetTowerInfo.cpp  GameActionGetTowerInfo.h  GameActionPutTower.cpp  GameActionPutTower.h  GameActionUpgradeTower.cpp  GameActionUpgradeTower.h
src/server/game-actors/enemies/: ActorAbmonible.cpp  ActorAbmonible.h  ActorEnemy.cpp  ActorEnemy.h  ActorEnemyAbmonible.cpp  ActorEnemyAbmonible.h  ActorEnemyBloodHawk.cpp  ActorEnemyBloodHawk.h  ActorEnemyGoatman.cpp  ActorEnemyGoatman.h  ActorEnemyGreenDaemon.cpp  ActorEnemyGreenDaemon.h  ActorEnemySpectre.cpp  ActorEnemySpectre.h  ActorEnemyZombie.cpp  ActorEnemyZombie.h  ActorHorde.cpp  ActorHorde.h  Horde.cpp  Horde.h
src/server/game-actors/towers/: ActorTower.cpp  ActorTower.h  ActorTowerAir.cpp  ActorTowerAir.h  ActorTowerEarth.cpp  ActorTowerEarth.h  ActorTowerFire.cpp  ActorTowerFire.h  ActorTowerWater.cpp  ActorTowerWater.h
tests/: Makefile  dummy_test.cpp  plug  plug.cc  socket  socket.cc  sockman.cpp
tests/unit/: catch_main.cpp  dummy_test.cpp  juego.cpp  mapa.cpp  threaded_queue.cpp  utils.cpp
